--- a/platform/logging/opensearch-values.yaml
+++ b/platform/logging/opensearch-values.yaml
@@ -17,8 +17,12 @@ resources:
 
 opensearchJavaOpts: "-Xms1g -Xmx1g"
 
-sysctlInitContainer:
-  enabled: true
+extraInitContainers:
+  - name: sysctl
+    image: busybox
+    command: ["sysctl", "-w", "vm.max_map_count=262144"]
+    securityContext:
+      privileged: true
 
 extraEnvs:
   - name: OPENSEARCH_INITIAL_ADMIN_PASSWORD
