Use podSecurityContext for sysctl

--- a/platform/logging/opensearch-values.yaml
+++ b/platform/logging/opensearch-values.yaml
@@ -17,12 +17,10 @@ resources:
 
 opensearchJavaOpts: "-Xms1g -Xmx1g"
 
-extraInitContainers:
-  - name: sysctl
-    image: busybox
-    command: ["sysctl", "-w", "vm.max_map_count=262144"]
-    securityContext:
-      privileged: true
+podSecurityContext:
+  sysctls:
+    - name: vm.max_map_count
+      value: "262144"
 
 extraEnvs:
   - name: OPENSEARCH_INITIAL_ADMIN_PASSWORD
