Explicitly disable sysctls in opensearch values

--- a/platform/logging/opensearch-values.yaml
+++ b/platform/logging/opensearch-values.yaml
@@ -17,6 +17,9 @@ resources:
 
 opensearchJavaOpts: "-Xms1g -Xmx1g -Dnode.store.allow_mmap=false"
 
+podSecurityContext:
+  sysctls: []
+
 extraEnvs:
   - name: OPENSEARCH_INITIAL_ADMIN_PASSWORD
     valueFrom:
