--- a/platform/logging/opensearch-values.yaml
+++ b/platform/logging/opensearch-values.yaml
@@ -17,11 +17,13 @@ resources:
 
 opensearchJavaOpts: "-Xms1g -Xmx1g"
 
-sysctlInitContainer:
-  enabled: true
-  securityContext:
-    privileged: true
-    runAsUser: 0
+extraInitContainers:
+  - name: sysctl
+    image: busybox:latest
+    command: ['sh', '-c', 'sysctl -w vm.max_map_count=262144']
+    securityContext:
+      privileged: true
+      runAsUser: 0
 
 podSecurityContext:
   sysctls: []
