--- a/platform/vault/values.vault.base.yaml
+++ b/platform/vault/values.vault.base.yaml
@@ -3,6 +3,7 @@
 # -----------------------------------------------------------------
 ui:
   enabled: true
+  serviceType: NodePort
 injector:
   enabled: true
 metrics:
