Fix hotel-service deployment env configuration

--- a/apps/hotel-reservation/03-hotel.yaml
+++ b/apps/hotel-reservation/03-hotel.yaml
@@ -56,6 +56,7 @@ spec:
           envFrom:
             - configMapRef:
                 name: asgardeo-config
+          env:
             - name: OTEL_EXPORTER_OTLP_ENDPOINT
               value: http://otel-collector.observability:4317
             - name: OTEL_SERVICE_NAME
