--- a/apps/hotel-reservation/08-frontend.yaml
+++ b/apps/hotel-reservation/08-frontend.yaml
@@ -1,5 +1,5 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: argoproj.io/v1alpha1
+kind: Rollout
 metadata:
   name: frontend
   namespace: phoenix-app
@@ -8,6 +8,11 @@ metadata:
     app.kubernetes.io/part-of: hotel-reservation
 spec:
   replicas: 1
+  strategy:
+    blueGreen: 
+      activeService: frontend
+      previewService: frontend-preview
+      autoPromotionEnabled: false
   selector:
     matchLabels:
       app: frontend
@@ -71,6 +76,22 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: frontend-preview
+  namespace: phoenix-app
+  labels:
+    app: frontend
+spec:
+  type: ClusterIP
+  selector:
+    app: frontend
+  ports:
+    - port: 80
+      targetPort: 4173
+
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: frontend
   namespace: phoenix-app
   labels:
@@ -93,8 +114,8 @@ metadata:
   namespace: phoenix-app
 spec:
   scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
+    apiVersion: argoproj.io/v1alpha1
+    kind: Rollout
     name: frontend
   minReplicas: 1
   maxReplicas: 5
