--- a/apps/hotel-reservation/00-namespace.yaml
+++ b/apps/hotel-reservation/00-namespace.yaml
@@ -5,8 +5,8 @@ metadata:
   labels:
     istio-injection: enabled
     goldilocks.fairwinds.com/enabled: "true"
-    pod-security.kubernetes.io/enforce: restricted
-    pod-security.kubernetes.io/audit: restricted
-    pod-security.kubernetes.io/warn: restricted
+    pod-security.kubernetes.io/enforce: privileged
+    pod-security.kubernetes.io/audit: privileged
+    pod-security.kubernetes.io/warn: privileged
   annotations:
     configmanagement.gke.io/cluster-selector: phoenix-app
