--- a/apps/hotel-reservation/charts/frontend/templates/rollout.yaml
+++ b/apps/hotel-reservation/charts/frontend/templates/rollout.yaml
@@ -2,12 +2,12 @@ apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
   name: frontend
-  namespace: phoenix-app
   labels:
+    app: frontend
     app.kubernetes.io/name: frontend
     app.kubernetes.io/part-of: hotel-reservation
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   strategy:
     blueGreen: 
       activeService: frontend
@@ -25,10 +25,11 @@ spec:
       annotations:
         sidecar.istio.io/inject: "true"
         prometheus.io/scrape: "true"
-        prometheus.io/port: "4173"
+        prometheus.io/port: "{{ .Values.service.port }}"
         prometheus.io/path: "/metrics"
         fluentbit.io/parser: nginx
     spec:
+      serviceAccountName: {{ .Values.serviceAccount.name }}
       securityContext:
         fsGroup: 101
         runAsUser: 101
@@ -38,27 +39,22 @@ spec:
         - name: regcred
       containers:
         - name: frontend
-          image: k8s-harbor-harborin-04b31170bb-1679859835.us-east-1.elb.amazonaws.com/phoenix-project/phoenix-frontend-service:5c0c469477dd00897e0b19c4816eabe304c63634
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: Always
           ports:
-            - containerPort: 4173 # <--- CHANGED FROM 80
+            - containerPort: {{ .Values.service.port }}
           resources:
-            requests:
-              memory: "128Mi"
-              cpu: "100m"
-            limits:
-              memory: "512Mi"
-              cpu: "500m"
+            {{- toYaml .Values.resources | nindent 12 }}
           livenessProbe:
             httpGet:
               path: /
-              port: 4173
+              port: {{ .Values.service.port }}
             initialDelaySeconds: 15
             periodSeconds: 20
           readinessProbe:
             httpGet:
               path: /
-              port: 4173
+              port: {{ .Values.service.port }}
             initialDelaySeconds: 5
             periodSeconds: 10
           volumeMounts:
@@ -84,60 +80,3 @@ spec:
           emptyDir: {}
         - name: nginx-tmp
           emptyDir: {}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend-preview
-  namespace: phoenix-app
-  labels:
-    app: frontend
-spec:
-  type: ClusterIP
-  selector:
-    app: frontend
-  ports:
-    - port: 80
-      targetPort: 4173
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend
-  namespace: phoenix-app
-  labels:
-    app: frontend
-spec:
-  type: ClusterIP
-  selector:
-    app: frontend
-  ports:
-    - port: 80 # Keep this 80 (Internal Cluster Port)
-      targetPort: 4173 # <--- CHANGED: Connect to the container on 4173
-  template:
-    spec:
-      containers: []
----
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
-metadata:
-  name: frontend
-  namespace: phoenix-app
-spec:
-  scaleTargetRef:
-    apiVersion: argoproj.io/v1alpha1
-    kind: Rollout
-    name: frontend
-  minReplicas: 1
-  maxReplicas: 5
-  metrics:
-    - type: Resource
-      resource:
-        name: cpu
-        target:
-          type: Utilization
-          averageUtilization: 60
-  template:
-    spec:
-      containers: []
