--- a/platform/logging/opensearch-values.yaml
+++ b/platform/logging/opensearch-values.yaml
@@ -17,13 +17,8 @@ resources:
 
 opensearchJavaOpts: "-Xms1g -Xmx1g"
 
-extraInitContainers:
-  - name: sysctl
-    image: busybox:latest
-    command: ['sh', '-c', 'sysctl -w vm.max_map_count=262144']
-    securityContext:
-      privileged: true
-      runAsUser: 0
+sysctlInit:
+  enabled: true
 
 podSecurityContext:
   sysctls: []
