Fix Harbor secrets and ignore OpenSearch initContainers diff

--- a/app-of-apps/app-platform-opensearch.yaml
+++ b/app-of-apps/app-platform-opensearch.yaml
@@ -29,3 +29,10 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
+  ignoreDifferences:
+    - group: apps
+      kind: StatefulSet
+      name: opensearch-cluster-master
+      jsonPointers:
+        - /spec/template/spec/initContainers
+
