Add ignoreDifferences for webhooks and CRDs

--- a/app-of-apps/app-platform-external-secrets.yaml
+++ b/app-of-apps/app-platform-external-secrets.yaml
@@ -28,3 +28,9 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      jsonPointers:
+        - /spec/conversion/webhook/clientConfig/caBundle
+        - /status
