--- a/app-of-apps/app-platform-istio-applications.yaml
+++ b/app-of-apps/app-platform-istio-applications.yaml
@@ -33,6 +33,12 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true 
+  ignoreDifferences:
+    - group: admissionregistration.k8s.io
+      kind: ValidatingWebhookConfiguration
+      jsonPointers:
+        - /webhooks/0/clientConfig/caBundle
+        - /webhooks/1/clientConfig/caBundle
 
 ---
 # ------------------------------------------
@@ -66,6 +72,12 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+  ignoreDifferences:
+    - group: admissionregistration.k8s.io
+      kind: ValidatingWebhookConfiguration
+      jsonPointers:
+        - /webhooks/0/clientConfig/caBundle
+        - /webhooks/1/clientConfig/caBundle
 
 ---
 # ------------------------------------------
