--- a/app-of-apps/app-platform-vault.yaml
+++ b/app-of-apps/app-platform-vault.yaml
@@ -34,3 +34,8 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+  ignoreDifferences:
+    - group: admissionregistration.k8s.io
+      kind: MutatingWebhookConfiguration
+      jsonPointers:
+        - /webhooks/0/clientConfig/caBundle
