Refine ignoreDifferences and fix Harbor secret key length

--- a/app-of-apps/app-platform-opensearch.yaml
+++ b/app-of-apps/app-platform-opensearch.yaml
@@ -35,4 +35,5 @@ spec:
       name: opensearch-cluster-master
       jsonPointers:
         - /spec/template/spec/initContainers
+        - /spec/volumeClaimTemplates
 
