--- a/app-of-apps/app-platform-external-secrets.yaml
+++ b/app-of-apps/app-platform-external-secrets.yaml
@@ -32,5 +32,6 @@ spec:
     - group: apiextensions.k8s.io
       kind: CustomResourceDefinition
       jsonPointers:
-        - /spec/conversion/webhook/clientConfig/caBundle
         - /status
+      jqPathExpressions:
+        - .spec.conversion.webhook.clientConfig.caBundle
