--- a/app-of-apps/app-platform-vault.yaml
+++ b/app-of-apps/app-platform-vault.yaml
@@ -37,5 +37,5 @@ spec:
   ignoreDifferences:
     - group: admissionregistration.k8s.io
       kind: MutatingWebhookConfiguration
-      jsonPointers:
-        - /webhooks/0/clientConfig/caBundle
+      jqPathExpressions:
+        - .webhooks[].clientConfig.caBundle
