Fix Harbor internal TLS and ignore ExternalSecrets conversion

--- a/app-of-apps/app-platform-harbor.yaml
+++ b/app-of-apps/app-platform-harbor.yaml
@@ -43,6 +43,11 @@ spec:
       name: harbor-registry-htpasswd
       jsonPointers:
         - /data
+    - group: ""
+      kind: Secret
+      name: harbor-core
+      jsonPointers:
+        - /data
     - group: apps
       kind: Deployment
       jsonPointers:
