--- a/app-of-apps/app-platform-external-secrets.yaml
+++ b/app-of-apps/app-platform-external-secrets.yaml
@@ -33,5 +33,4 @@ spec:
       kind: CustomResourceDefinition
       jsonPointers:
         - /status
-      jqPathExpressions:
-        - .spec.conversion.webhook.clientConfig.caBundle
+        - /spec/conversion
