Aggressive ignoreDifferences for Harbor and Istio

--- a/app-of-apps/app-platform-istio-applications.yaml
+++ b/app-of-apps/app-platform-istio-applications.yaml
@@ -36,8 +36,8 @@ spec:
   ignoreDifferences:
     - group: admissionregistration.k8s.io
       kind: ValidatingWebhookConfiguration
-      jqPathExpressions:
-        - .webhooks[].clientConfig.caBundle
+      jsonPointers:
+        - /webhooks
 
 ---
 # ------------------------------------------
@@ -74,8 +74,8 @@ spec:
   ignoreDifferences:
     - group: admissionregistration.k8s.io
       kind: ValidatingWebhookConfiguration
-      jqPathExpressions:
-        - .webhooks[].clientConfig.caBundle
+      jsonPointers:
+        - /webhooks
 
 ---
 # ------------------------------------------
