Fix Harbor checksum ignores and ExternalSecrets annotations

--- a/app-of-apps/app-platform-harbor.yaml
+++ b/app-of-apps/app-platform-harbor.yaml
@@ -47,5 +47,7 @@ spec:
     - group: apps
       kind: Deployment
       jsonPointers:
-        - /spec/template/metadata/annotations/checksum~1config
+        - /spec/template/metadata/annotations/checksum~1configmap
         - /spec/template/metadata/annotations/checksum~1secret
+        - /spec/template/metadata/annotations/checksum~1secret-core
+        - /spec/template/metadata/annotations/checksum~1secret-jobservice
