Use jqPathExpressions for ExternalSecrets conversion

--- a/app-of-apps/app-platform-external-secrets.yaml
+++ b/app-of-apps/app-platform-external-secrets.yaml
@@ -33,5 +33,6 @@ spec:
       kind: CustomResourceDefinition
       jsonPointers:
         - /status
-        - /spec/conversion
         - /metadata/annotations
+      jqPathExpressions:
+        - .spec.conversion
