fix: add ignoreDifferences for harbor, external-secrets, and kiali

--- a/app-of-apps/app-platform-external-secrets.yaml
+++ b/app-of-apps/app-platform-external-secrets.yaml
@@ -34,5 +34,7 @@ spec:
       jsonPointers:
         - /status
         - /metadata/annotations
-      jqPathExpressions:
-        - .spec.conversion
+        - /metadata/labels
+        - /spec
+
+
