fix: use Recreate strategy for harbor jobservice and registry

--- a/platform/registry/harbor-values.yaml
+++ b/platform/registry/harbor-values.yaml
@@ -34,9 +34,15 @@ core:
 
 jobservice:
   secret: "HarborJobSecret1"
+  strategy:
+    type: Recreate
+
 
 registry:
   secret: "HarborRegSecret1"
+  strategy:
+    type: Recreate
+
 
 persistence:
   enabled: true
