Fix Grafana ingress host and disable OpenSearch security for demo

--- a/platform/logging/opensearch-values.yaml
+++ b/platform/logging/opensearch-values.yaml
@@ -17,6 +17,10 @@ resources:
 
 opensearchJavaOpts: "-Xms1g -Xmx1g"
 
+config:
+  opensearch.yml:
+    plugins.security.disabled: true
+
 sysctlInit:
   enabled: true
 
