Configure OpenSearch Dashboards to use HTTP

--- a/platform/logging/opensearch-dashboards-values.yaml
+++ b/platform/logging/opensearch-dashboards-values.yaml
@@ -1,6 +1,8 @@
 opensearchAccount:
   secret: "opensearch-admin-secret"
 
+opensearchHosts: "http://opensearch-cluster-master:9200"
+
 service:
   type: NodePort
 
