--- a/apps/hotel-reservation/templates/istio-gateway.yaml
+++ b/apps/hotel-reservation/templates/istio-gateway.yaml
@@ -27,12 +27,84 @@ spec:
   http:
   - match:
     - uri:
-        prefix: /api/
+        prefix: /api/auth
     route:
     - destination:
-        host: api-gateway
+        host: identity-service
         port:
-          number: 7008
+          number: 7102
+  - match:
+    - uri:
+        prefix: /api/users
+    route:
+    - destination:
+        host: identity-service
+        port:
+          number: 7102
+  - match:
+    - uri:
+        prefix: /api/hotels/search
+    route:
+    - destination:
+        host: search-service
+        port:
+          number: 7105
+  - match:
+    - uri:
+        regex: ^/api/hotels/[^/]+/bookings.*
+    route:
+    - destination:
+        host: booking-service
+        port:
+          number: 7104
+  - match:
+    - uri:
+        regex: ^/api/hotels/[^/]+/waitlist.*
+    route:
+    - destination:
+        host: booking-service
+        port:
+          number: 7104
+  - match:
+    - uri:
+        prefix: /api/hotels
+    route:
+    - destination:
+        host: hotel-service
+        port:
+          number: 7103
+  - match:
+    - uri:
+        prefix: /api/bookings
+    route:
+    - destination:
+        host: booking-service
+        port:
+          number: 7104
+  - match:
+    - uri:
+        prefix: /api/my-bookings
+    route:
+    - destination:
+        host: booking-service
+        port:
+          number: 7104
+  - match:
+    - uri:
+        prefix: /api/notifications
+    route:
+    - destination:
+        host: notification-service
+        port:
+          number: 7101
+  - match:
+    - uri:
+        prefix: /api/push
+    route:
+    - destination:
+        host: notification-service
+        port:
+          number: 7101
   - match:
     - uri:
         prefix: /
