--- a/apps/hotel-reservation/Chart.yaml
+++ b/apps/hotel-reservation/Chart.yaml
@@ -23,3 +23,6 @@ dependencies:
   - name: frontend
     version: 0.1.0
     repository: "file://charts/frontend"
+  - name: rabbitmq
+    version: 0.1.0
+    repository: "file://charts/rabbitmq"
