--- a/app-of-apps/phoenix-production-set.yaml
+++ b/app-of-apps/phoenix-production-set.yaml
@@ -13,13 +13,13 @@ spec:
     path: apps/hotel-reservation
     helm:
       valueFiles:
-        - environments/production/frontend.yaml
-        - environments/production/identity-service.yaml
-        - environments/production/hotel-service.yaml
-        - environments/production/booking-service.yaml
-        - environments/production/search-service.yaml
-        - environments/production/notification-service.yaml
-        - environments/production/rabbitmq.yaml
+        - ../../environments/production/frontend.yaml
+        - ../../environments/production/identity-service.yaml
+        - ../../environments/production/hotel-service.yaml
+        - ../../environments/production/booking-service.yaml
+        - ../../environments/production/search-service.yaml
+        - ../../environments/production/notification-service.yaml
+        - ../../environments/production/rabbitmq.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: phoenix-prod
