--- a/app-of-apps/phoenix-staging-infrastructure.yaml
+++ b/app-of-apps/phoenix-staging-infrastructure.yaml
@@ -1,1 +1,22 @@
-# TODO: Argo CD Application for phoenix staging infrastructure
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: phoenix-staging-infrastructure
+  namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
+    targetRevision: master
+    path: environments/staging/infra
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: phoenix-staging
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
