Phase 2: Add HPA, PDB, and switch to Harbor

--- a/environments/production/frontend.yaml
+++ b/environments/production/frontend.yaml
@@ -10,3 +10,11 @@ frontend:
     limits:
       cpu: "500m"
       memory: "512Mi"
+  autoscaling:
+    enabled: true
+    minReplicas: 2
+    maxReplicas: 10
+    targetCPUUtilizationPercentage: 75
+  podDisruptionBudget:
+    enabled: true
+    minAvailable: 1
