--- a/environments/production/identity-service.yaml
+++ b/environments/production/identity-service.yaml
@@ -9,3 +9,11 @@ identity-service:
     limits:
       cpu: "500m"
       memory: "512Mi"
+  autoscaling:
+    enabled: true
+    minReplicas: 2
+    maxReplicas: 10
+    targetCPUUtilizationPercentage: 75
+  podDisruptionBudget:
+    enabled: true
+    minAvailable: 1
