--- a/apps/hotel-reservation/charts/frontend/values.yaml
+++ b/apps/hotel-reservation/charts/frontend/values.yaml
@@ -13,3 +13,13 @@ resources:
   limits:
     memory: "512Mi"
     cpu: "500m"
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
+
+podDisruptionBudget:
+  enabled: false
+  minAvailable: 1
