--- a/apps/hotel-reservation/charts/hotel-service/values.yaml
+++ b/apps/hotel-reservation/charts/hotel-service/values.yaml
@@ -22,3 +22,13 @@ env:
     value: service.namespace=phoenix-app,service.name=hotel-service,deployment.environment=prod
   - name: MONGODB_CONNECTION_STRING
     value: "mongodb://mongodb:27017/hotel-booking"
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
+
+podDisruptionBudget:
+  enabled: false
+  minAvailable: 1
