--- a/apps/hotel-reservation/charts/identity-service/values.yaml
+++ b/apps/hotel-reservation/charts/identity-service/values.yaml
@@ -26,3 +26,13 @@ env:
     value: service.namespace=phoenix-app,service.name=identity-service,deployment.environment=prod
   - name: LOG_LEVEL
     value: info
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
+
+podDisruptionBudget:
+  enabled: false
+  minAvailable: 1
