--- a/apps/hotel-reservation/charts/notification-service/values.yaml
+++ b/apps/hotel-reservation/charts/notification-service/values.yaml
@@ -20,3 +20,13 @@ env:
     value: notification-service
   - name: OTEL_RESOURCE_ATTRIBUTES
     value: service.namespace=phoenix-app,service.name=notification-service,deployment.environment=prod
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
+
+podDisruptionBudget:
+  enabled: false
+  minAvailable: 1
