--- a/apps/hotel-reservation/charts/search-service/values.yaml
+++ b/apps/hotel-reservation/charts/search-service/values.yaml
@@ -22,3 +22,13 @@ env:
     value: search-service
   - name: OTEL_RESOURCE_ATTRIBUTES
     value: service.namespace=phoenix-app,service.name=search-service,deployment.environment=prod
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
+
+podDisruptionBudget:
+  enabled: false
+  minAvailable: 1
