Fix Kaniko jobs: add insecure flag and creds mount; remove sensitive files

--- a/builder-setup.yaml
+++ b/builder-setup.yaml
@@ -20,6 +20,7 @@ spec:
   - name: transfer
     image: ubuntu
     command: ["/bin/bash", "-c", "apt-get update && apt-get install -y tar && sleep infinity"]
+    imagePullPolicy: IfNotPresent
     volumeMounts:
     - mountPath: /workspace
       name: source-volume
