chore: optimize infra and enforce k8s industry standards

--- a/apps/hotel-reservation/charts/booking-service/values.yaml
+++ b/apps/hotel-reservation/charts/booking-service/values.yaml
@@ -6,6 +6,10 @@ service:
   port: 7104
 serviceAccount:
   name: booking-service-sa
+
+imagePullSecrets:
+  - name: harbor-creds
+
 resources:
   requests:
     memory: "128Mi"
