--- a/apps/hotel-reservation/charts/identity-service/templates/deployment.yaml
+++ b/apps/hotel-reservation/charts/identity-service/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
         fsGroup: 2000
         runAsNonRoot: true
       imagePullSecrets:
-        - name: regcred
+        {{- toYaml .Values.imagePullSecrets | nindent 8 }}
       containers:
         - name: identity-service
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
