--- a/apps/hotel-reservation/charts/notification-service/values.yaml
+++ b/apps/hotel-reservation/charts/notification-service/values.yaml
@@ -6,6 +6,10 @@ service:
   port: 7101
 serviceAccount:
   name: notification-service-sa
+
+imagePullSecrets:
+  - name: harbor-creds
+
 resources:
   requests:
     memory: "128Mi"
