--- a/apps/hotel-reservation/charts/frontend/templates/rollout.yaml
+++ b/apps/hotel-reservation/charts/frontend/templates/rollout.yaml
@@ -36,7 +36,7 @@ spec:
         runAsGroup: 101
         runAsNonRoot: true
       imagePullSecrets:
-        - name: regcred
+        {{- toYaml .Values.imagePullSecrets | nindent 8 }}
       containers:
         - name: frontend
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
