chore: cleanup platform manifests and enforce ingress standards

--- a/platform/sonarqube/ingress.yaml
+++ b/platform/sonarqube/ingress.yaml
@@ -4,12 +4,11 @@ metadata:
   name: sonarqube-ingress
   namespace: sonarqube
   annotations:
-    kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/subnets: subnet-0a6bf732901bb35e8, subnet-066b28455fe0a88d1
     alb.ingress.kubernetes.io/target-type: instance
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
 spec:
+  ingressClassName: alb
   rules:
     # - host: sonar.pheonix.live
     - http:
