--- a/apps/hotel-reservation/charts/frontend/templates/service.yaml
+++ b/apps/hotel-reservation/charts/frontend/templates/service.yaml
@@ -5,12 +5,15 @@ metadata:
   labels:
     app: frontend
 spec:
-  type: ClusterIP
+  type: {{ .Values.service.type | default "ClusterIP" }}
   selector:
     app: frontend
   ports:
     - port: 80
       targetPort: {{ .Values.service.port }}
+      {{- if .Values.service.nodePort }}
+      nodePort: {{ .Values.service.nodePort }}
+      {{- end }}
 ---
 apiVersion: v1
 kind: Service
