feat: Add phoenix-staging-set.yaml

--- a/app-of-apps/phoenix-staging-set.yaml
+++ b/app-of-apps/phoenix-staging-set.yaml
@@ -9,20 +9,11 @@ spec:
   project: default
   source:
     repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
-    targetRevision: master
+    targetRevision: staging
     path: apps/hotel-reservation
-    helm:
-      valueFiles:
-        - ../../environments/staging/staging-frontend.yaml
-        - ../../environments/staging/staging-identity-service.yaml
-        - ../../environments/staging/staging-hotel-service.yaml
-        - ../../environments/staging/staging-booking-service.yaml
-        - ../../environments/staging/staging-search-service.yaml
-        - ../../environments/staging/staging-notification-service.yaml
-        - ../../environments/staging/staging-rabbitmq.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: phoenix-staging
+    namespace: staging # Deploy to the staging namespace
   syncPolicy:
     automated:
       prune: true
